--- a/css/breakout.css
+++ b/css/breakout.css
@@ -4,5 +4,13 @@
 
 
 body{
-    background-color:#0095dd
+    background-color:#0095dd;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+    min-height:100vh;
+    margin:0;
+    font-family:
+
 }
