Mon, Mar 18, 2024, 10:25 AM -07:00

--- a/css/breakout.css
+++ b/css/breakout.css
@@ -11,6 +11,33 @@ body{
     justify-content:center;
     min-height:100vh;
     margin:0;
-    font-family:
+    font-family:Arial, Helvetica,sans-serif;
 
+
+}
+canvas{
+    background-color:#f0f0f0;
+    display:block;
+    border-radius:5px;
+
+}
+h1{
+    font-size:45px;
+    color:white;
+
+}
+.btn{
+ cursor:pointer;
+ border:0;
+ padding:10px 20px;
+ background-color:black;
+ color:white;
+ border-radius:5px;
+}
+.btn:hover{
+    background-color:#222222;
+
+}
+.btn:active{
+    transform:scale(0.98)
 }
