--- a/css/breakout.css
+++ b/css/breakout.css
@@ -50,6 +50,11 @@ h1{
     position:absolute;
     top:0;
     left:0;
-    background-color:#333;
+    background:#333;
     color:white;
+    min-height:100vh;
+    width:400px;
+    padding:20px;
+    line-height:1.5;
+    transform:translateX(-400px);
 }
