--- a/css/breakout.css
+++ b/css/breakout.css
@@ -59,3 +59,7 @@ h1{
     transform:translateX(-400px);
     transition:transform 1s ease-in-out;
 }
+.rules.show{
+    transform:translateX(0);
+    
+}
