--- a/css/breakout.css
+++ b/css/breakout.css
@@ -4,7 +4,7 @@
 
 
 body{
-    background-color:#0095dd;
+    background-color:pink;
     display:flex;
     flex-direction:column;
     align-items:center;
@@ -61,5 +61,5 @@ h1{
 }
 .rules.show{
     transform:translateX(0);
-    
+
 }
