Wed, Apr 3, 2024, 9:35 AM -07:00

--- a/css/breakout.css
+++ b/css/breakout.css
@@ -64,3 +64,9 @@ h1 {
 .rules.show {
     transform: translateX(0);
 }
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
