--- a/css/breakout.css
+++ b/css/breakout.css
@@ -1,7 +1,3 @@
-* {
-    box-sizing: border-box;
-}
-
 body {
     background-color: #0095DD;
     display: flex;
@@ -11,12 +7,6 @@ body {
     min-height: 100vh;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-}
-
-canvas {
-    background: #f0f0f0;
-    display: block;
-    border-radius: 5px;
 }
 
 h1 {
@@ -31,10 +21,11 @@ h1 {
     background: black;
     color: white;
     border-radius: 5px;
+    margin: 5px;
 }
 
 .btn:hover {
-    background: #222222;
+    background: #222;
 }
 
 .btn:active {
@@ -58,15 +49,17 @@ h1 {
     padding: 20px;
     line-height: 1.5;
     transform: translateX(-400px);
-    transition: transform 1s ease-in-out;
+    transition: transform 1s ease-in-out, opacity 0.5s ease-in-out;
+    opacity: 0;
 }
 
 .rules.show {
     transform: translateX(0);
+    opacity: 1;
 }
-.center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 5vh;
+
+canvas {
+    background: #f0f0f0;
+    display: block;
+    border-radius: 5px;
 }
