--- a/css/insect.css
+++ b/css/insect.css
@@ -4,10 +4,10 @@
     box-sizing: border-box;
 }
 
-body {
-    font-family: "Press Start 2P", system-ui;
+body{
     background-color: #516dff;
     color: #ffffff;
+    font-family: "Press Start 2P", system-ui;
     height: 100vh;
     overflow: hidden;
     text-align: center;
@@ -21,6 +21,7 @@ body {
 
 .screen {
     height: 100vh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -29,16 +30,19 @@ body {
 
 .btn {
     border: 0;
-    background-color: white;
+    background-color: #ffffff;
     color: #516dff;
     padding: 15px 20px;
     cursor: pointer;
     font-family: inherit;
+
 }
 
 .btn:hover {
     opacity: 0.9;
 }
+
+
 
 .screen.up {
     margin-top: -100vh;
@@ -66,21 +70,21 @@ h1 {
 
 .choose-insect-btn {
     background-color: transparent;
-    border: 2px solid white;
-    color: white;
+    border: 2px solid #ffffff;
+    color: #ffffff;
     cursor: pointer;
     font-family: inherit;
     width: 150px;
     height: 150px;
 }
 
-.choose-insect-btn:hover {
-    background-color: white;
+.choose-insect.btn:hover {
+    background-color : #ffffff;
     color: #516dff;
 }
 
 .choose-insect-btn:active {
-    background-color: rgba(255,255,255,0.7);
+    background-color: rgba(255,255,255, 0.7)
 }
 
 .game-container {
@@ -93,11 +97,13 @@ h1 {
     left: 20px;
 }
 
+
 .score {
     position: absolute;
     top: 20px;
     right: 20px;
 }
+
 
 .message {
     line-height: 1.7;
@@ -106,18 +112,19 @@ h1 {
     z-index: 100;
     padding: 20px;
     text-align: center;
+    position: absolute;
     top: 0;
     left: 50%;
-    position: absolute;
-    opacity: 0;
     transform: translate(-50%, -150%);
-    transition: transform 0.4s ease-in;
 }
 
+
+
+
 .message.visible {
-    transform: translate(-50%, 150%);
-    opacity: 1;
+    transform: translate(-50%, 150%)
 }
+
 
 .insect {
     cursor: pointer;
@@ -127,12 +134,10 @@ h1 {
     width: 100px;
     height: 100px;
     position: absolute;
-    top: 500px;
-    left: 200px;
     transform: translate(-50%, -50%) scale(1);
     transition: transform 0.3s ease-in-out;
 }
 
 .insect.caught {
-    transform: translate(-50%, -50%) scale(0);
+    transform: translate (-50%, -50%) scale(0);
 }
