--- a/css/insect.css
+++ b/css/insect.css
@@ -26,6 +26,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    transition: margin 0.5s ease-in;
 }
 
 .btn {
@@ -45,6 +46,7 @@ body{
 
 
 .screen.up {
+
     margin-top: -100vh;
 }
 
@@ -116,12 +118,14 @@ h1 {
     top: 0;
     left: 50%;
     transform: translate(-50%, -150%);
+    opacity:0;
 }
 
 
 
 
 .message.visible {
+    opacity:1;
     transform: translate(-50%, 150%)
 }
 
