--- a/css/insect.css
+++ b/css/insect.css
@@ -26,7 +26,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    transition: margin 0.5s ease-in;
+    transition: margin .5s ease-in;
 }
 
 .btn {
@@ -46,7 +46,6 @@ body{
 
 
 .screen.up {
-
     margin-top: -100vh;
 }
 
@@ -105,9 +104,8 @@ h1 {
     top: 20px;
     right: 20px;
 }
-
-
-.message {
+#win-message{
+    opacity: 0;
     line-height: 1.7;
     width: 100%;
     background-color: rgba(0,0,0,0.5);
@@ -118,14 +116,49 @@ h1 {
     top: 0;
     left: 50%;
     transform: translate(-50%, -150%);
-    opacity:0;
+}
+#win-message.visible{
+    transition: ease-out 1s;
+    opacity: 1;
+}
+#lose-message{
+    opacity: 0;
+    line-height: 1.7;
+    width: 100%;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 100;
+    padding: 20px;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -150%);
+}
+#lose-message.visible{
+    transition: ease-out 1s;
+    opacity: 1;
+}
+
+.message {
+    opacity: 0;
+    line-height: 1.7;
+    width: 100%;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 100;
+    padding: 20px;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -150%);
+    transition: ease-in 1s;
 }
 
 
 
 
 .message.visible {
-    opacity:1;
+    opacity: 1;
     transform: translate(-50%, 150%)
 }
 
@@ -142,6 +175,11 @@ h1 {
     transition: transform 0.3s ease-in-out;
 }
 
+.insect img {
+    width: 100px;
+    height: 100px;
+}
+
 .insect.caught {
-    transform: translate (-50%, -50%) scale(0);
+    transform: translate(-50%, -50%) scale(0);
 }
